// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moduleHome should handle IS_READY_TVSHOWS 1`] = `
Object {
  "isReadyTvShows": undefined,
}
`;

exports[`moduleHome should handle SET_TVSHOWS 1`] = `
Object {
  "tvShows": undefined,
}
`;

exports[`moduleHome should return the initial state 1`] = `
Object {
  "isReadyTvShows": false,
}
`;
